[Fix]: margin and padding required gaps

--- a/src/App.css
+++ b/src/App.css
@@ -4,23 +4,6 @@
   display: flex;
   justify-content: center;
   padding-block: 4rem;
-  background-color: yellow;
+  background-color: rgb(216, 216, 226);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 
